--- a/_posts/2018-11-22-pflick.markdown
+++ b/_posts/2018-11-22-pflick.markdown
@@ -3,8 +3,7 @@ layout: post
 title:  "Flick"
 date:   2018-11-22 06:00:00 +0530
 category: poetry
-tags:
-- poem
+tags: [poem]
 ---
 A switch flicks
 
