--- a/_posts/2021-10-03-cup.markdown
+++ b/_posts/2021-10-03-cup.markdown
@@ -2,9 +2,8 @@
 layout: post
 title: Cup
 date: 2021-10-03 23:05:41 +0530
-tags:
-- poetry
-comments: true
+category: poetry
+comments: false
 ---
 <center>
   <img src="/images/cup_1.jpeg" alt="cup">
